# Hearth

./: .clang-format  .gitignore  CMakeLists.txt  ISSUE_TEMPLATE.md  README.md  build.sh
Editor/: CMakeLists.txt
Editor/include/HearthFire/: EditorApplication.hpp
Editor/source/: EditorApplication.cpp  Entry.cpp
Engine/: CMakeLists.txt
Engine/include/Hearth/: Config.hpp  Core.hpp  Hearth.hpp
Engine/include/Hearth/Core/: Application.hpp  Config.hpp  Environment.hpp  Event.hpp  Forward.hpp  Logger.hpp  Monitor.hpp  Renderer.hpp  Version.hpp  Window.hpp
Engine/include/Hearth/Graphics/: RenderContext.hpp  Surface.hpp
Engine/include/Hearth/Memory/: Reference.hpp  View.hpp
Engine/source/: Internal.cpp
Engine/source/Core/: Application.cpp  Environment.cpp  EventDispatcher.hpp  Logger.cpp
Engine/source/Graphics/: RenderContext.cpp
Engine/source/Graphics/OpenGL/: OpenGLRenderContext.cpp  OpenGLRenderContext.hpp  OpenGLSurface.hpp
Engine/source/Graphics/OpenGL/WinAPI/: Surface.cpp  Surface.hpp
Engine/source/Native/WinAPI/: Monitor.cpp  WinAPI.hpp  WinAPIWindow.cpp  WinAPIWindow.hpp  WinApiEnvironment.cpp  WinApiEnvironment.hpp  WinApiEventHandler.cpp  WinApiEventHandler.hpp
HTL/: CMakeLists.txt
HTL/include/htl/: Forward.hpp  IntTypes.hpp  Memory.hpp  Traits.hpp  htl.hpp
HTL/include/htl/Memory/: Reference.hpp  View.hpp
HTL/include/htl/Traits/: AddConst.hpp  AddConstVolatile.hpp  AddPointer.hpp  AddReference.hpp  AddVolatile.hpp  BooleanType.hpp  Conditional.hpp  Conjunction.hpp  Decay.hpp  Disjunction.hpp  EnableIf.hpp  Identity.hpp  IsArray.hpp  IsConst.hpp  IsFunction.hpp  IsMemberFunctionPointer.hpp  IsMemberPointer.hpp  IsObject.hpp  IsPointer.hpp  IsReference.hpp  IsReferenceable.hpp  IsSame.hpp  IsVoid.hpp  IsVolatile.hpp  Negation.hpp  RemoveConst.hpp  RemoveConstVolatile.hpp  RemoveExtent.hpp  RemovePointer.hpp  RemoveReference.hpp  RemoveVolatile.hpp  VoidType.hpp
HTL/tests/Memory/: ReferenceTests.cpp  ViewTests.cpp
HTL/tests/Traits/: AddConstTests.cpp  AddConstVolatileTests.cpp  AddPointerTests.cpp  AddReferencesTests.cpp  AddVolatileTests.cpp  BooleanTypeTests.cpp  ConditionalTests.cpp  ConjunctionTests.cpp  DecayTests.cpp  DisjunctionTests.cpp  EnableIfTests.cpp  IsArrayTests.cpp  IsConstTests.cpp  IsFunctionTests.cpp  IsMemberFunctionPointerTests.cpp  IsMemberPointerTests.cpp  IsObjectTests.cpp  IsPointerTests.cpp  IsReferenceTests.cpp  IsReferenceableTests.cpp  IsSameTests.cpp  IsVoidTests.cpp  IsVolatileTests.cpp  NegationTests.cpp  RemoveConstTests.cpp  RemoveConstVolatileTests.cpp  RemoveExtentTests.cpp  RemovePointerTests.cpp  RemoveReferenceTests.cpp  RemoveVolatileTests.cpp
cmake/: CompilerWarnings.cmake  ProjectSettings.cmake
include/hearth/: application.hpp  compiler.hpp  config.hpp  environment.hpp  event.hpp  forward.hpp  hearth.hpp  platform.hpp  version.hpp  window.hpp
include/hearth/graphics/: cmdbuf.hpp  dscset.hpp  fence.hpp  format.hpp  frmbuf.hpp  gfxpip.hpp  rdrctx.hpp  rdrpss.hpp  resbuf.hpp  semphr.hpp  swpchn.hpp
resources/: shader.vert
source/: CMakeLists.txt  application.cpp  environment.cpp  event.cpp  eventbus.hpp  window.cpp
source/graphics/: cmdbuf.cpp  dscset.cpp  fence.cpp  frmbuf.cpp  gfxpip.cpp  queuefamily.hpp  rdrctx.cpp  rdrpss.cpp  resbuf.cpp  semphr.cpp  swpchn.cpp
source/win32/: environment.cpp  environment.hpp  winapi.cpp  winapi.hpp  window.cpp  window.hpp
tests/: CMakeLists.txt  entry.cpp
