set(HTL_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include/)
set(HTL_TESTS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/tests)
set(HTL_TESTS_TRAITS_DIR ${HTL_TESTS_DIR}/Traits)
set(HTL_TESTS_MEMORY_DIR ${HTL_TESTS_DIR}/Memory)

function(add_htl_memory_test TESTNAME)
  add_custom_gtest(${TESTNAME} ${HTL_TESTS_MEMORY_DIR}/${TESTNAME}.cpp)
  target_include_directories(${TESTNAME} PRIVATE ${HTL_INCLUDE_DIR})
  target_compile_features(${TESTNAME} PRIVATE cxx_std_20)
endfunction()

function(add_htl_traits_test TESTNAME)
  add_custom_gtest(${TESTNAME} ${HTL_TESTS_TRAITS_DIR}/${TESTNAME}.cpp)
  target_include_directories(${TESTNAME} PRIVATE ${HTL_INCLUDE_DIR})
  target_compile_features(${TESTNAME} PRIVATE cxx_std_20)
endfunction()

# Build Memory tests.
add_htl_memory_test(ReferenceTests)
add_htl_memory_test(ViewTests)

# Build Traits tests.
add_htl_traits_test(AddConstTests)
add_htl_traits_test(AddConstVolatileTests)
add_htl_traits_test(AddPointerTests)
add_htl_traits_test(AddReferencesTests)
add_htl_traits_test(AddVolatileTests)
add_htl_traits_test(BooleanTypeTests)
add_htl_traits_test(ConditionalTests)
add_htl_traits_test(ConjunctionTests)
add_htl_traits_test(DecayTests)
add_htl_traits_test(DisjunctionTests)
add_htl_traits_test(EnableIfTests)
add_htl_traits_test(IsArrayTests)
add_htl_traits_test(IsConstTests)
add_htl_traits_test(IsFunctionTests)
add_htl_traits_test(IsMemberFunctionPointerTests)
add_htl_traits_test(IsMemberPointerTests)
add_htl_traits_test(IsObjectTests)
add_htl_traits_test(IsPointerTests)
add_htl_traits_test(IsReferenceableTests)
add_htl_traits_test(IsReferenceTests)
add_htl_traits_test(IsSameTests)
add_htl_traits_test(IsVoidTests)
add_htl_traits_test(IsVolatileTests)
add_htl_traits_test(NegationTests)
add_htl_traits_test(RemoveConstTests)
add_htl_traits_test(RemoveConstVolatileTests)
add_htl_traits_test(RemoveExtentTests)
add_htl_traits_test(RemovePointerTests)
add_htl_traits_test(RemoveReferenceTests)
add_htl_traits_test(RemoveVolatileTests)

# Build Library out of files.
add_library(htl INTERFACE)
add_library(htl::htl ALIAS htl)
target_include_directories(htl INTERFACE ${HTL_INCLUDE_DIR})
